Jenkins/nielkinsg.tf
resource "aws_security_group" "nielsecg" { 
	name        = "nielsecg" 
    description = "Allow traffic on port 8080 and enable SSH" 
    vpc_id      = var.vpc 
    
    ingress { 
    	from_port       = "22" 
        to_port         = "22" 
        protocol        = "tcp" 
        cidr_blocks     = ["0.0.0.0/0"] 
   } 
   ingress { 
   		from_port       = "8080" 
        to_port         = "8080" 
        protocol        = "tcp" 
        cidr_blocks     = ["0.0.0.0/0"] 
   } 
   ingress { 
   		from_port       = "80" 
        to_port         = "80" 
        protocol        = "tcp" 
        cidr_blocks     = ["0.0.0.0/0"] 
   }


   ingress {
        from_port      = 443
        to_port        = 443
        protocol       = "tcp"
        cidr_blocks    = ["0.0.0.0/0"]
  }
  
  egress { 
  		from_port   = "0" 
        to_port     = "0" 
        protocol    = "-1" 
        cidr_blocks = ["0.0.0.0/0"] 
  } 
  
  tags = { 
  	Name = "nielsecg" 
  }
}
